--- a/visual/CSS/main.css
+++ b/visual/CSS/main.css
@@ -16,7 +16,7 @@
     grid-template-rows: 240px auto;
     grid-template-areas: "header" "main";
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 #container {
